--- a/uesb_forms/android/build.gradle
+++ b/uesb_forms/android/build.gradle
@@ -1,7 +1,22 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+
+
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+
+  dependencies {
+    classpath 'com.android.tools.build:gradle:7.0.4'
+    classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
