--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_auth: ^4.17.7
+  google_sign_in: ^6.2.1
+  firebase_core: ^2.26.0
+  sign_in_button: ^3.2.0
+  intl: ^0.19.0
+  provider: ^6.1.2
+  http: ^0.13.3
+  shared_preferences: ^2.0.6
+  
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
