--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -31,15 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_auth: ^4.17.7
+  firebase_auth: ^5.2.1
   google_sign_in: ^6.2.1
-  firebase_core: ^2.26.0
-  sign_in_button: ^3.2.0
+  firebase_core: ^3.4.1
   intl: ^0.19.0
   provider: ^6.1.2
-  http: ^0.13.3
+  http: ^1.2.2
   shared_preferences: ^2.0.6
-  
+  flutter_signin_button: ^2.0.0
+
 
 
 dev_dependencies:
@@ -68,7 +68,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/brasaoUesb.png
+    - images/google.png
+    - images/googleLogo.png
+    - images/form.png
+    - images/form_roxo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
