--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 uesb_forms/lib/Componentes/BancoDeQuestoes/widget_multipla_escolha.dart
 uesb_forms/android/local.properties
+uesb_forms/android/local.properties
