--- a/uesb_forms/android/local.properties
+++ b/uesb_forms/android/local.properties
@@ -1,5 +1,6 @@
-sdk.dir=C:\\Users\\Rayssa\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter\\src\\flutter
+sdk.dir=C:\\Users\\alexl\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\development\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
+flutter.compileSdkVersion=33
