--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_signin_button: ^2.0.0
   cloud_firestore: ^5.4.1
- 
+  image_picker: ^0.8.4+5
+  permission_handler: ^10.2.0
+  image: ^3.0.1
 
 
 dev_dependencies:
