--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   image_picker: ^0.8.4+5
   permission_handler: ^10.2.0
   image: ^3.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.15
 
 
 dev_dependencies:
