--- a/uesb_forms/ios/Flutter/Generated.xcconfig
+++ b/uesb_forms/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\flutter\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Rayssa\Documents\GitHub\Engenharia-de-Software\uesb_forms
+FLUTTER_ROOT=C:\src\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\mathe\OneDrive\Documentos\GitHub\Engenharia-de-Software\uesb_forms
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
