--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   build_runner: ^2.4.15
+  crypto: ^3.0.6
+  cloudinary_flutter: ^1.3.0
 
 
 dev_dependencies:
