--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   build_runner: ^2.4.15
   crypto: ^3.0.6
   cloudinary_flutter: ^1.3.0
+  flutter_image_compress: ^2.4.0
 
 
 dev_dependencies:
