--- a/uesb_forms/pubspec.yaml
+++ b/uesb_forms/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  excel: ^2.0.0
+  permission_handler: ^11.0.0
   firebase_auth: ^5.2.1
   google_sign_in: ^6.2.1
   firebase_core: ^3.4.1
@@ -42,7 +43,6 @@ dependencies:
   flutter_signin_button: ^2.0.0
   cloud_firestore: ^5.4.1
   image_picker: ^0.8.4+5
-  permission_handler: ^10.2.0
   image: ^3.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -50,6 +50,9 @@ dependencies:
   crypto: ^3.0.6
   cloudinary_flutter: ^1.3.0
   flutter_image_compress: ^2.4.0
+  fl_chart: ^0.64.0
+  open_file: ^3.0.1
+  path_provider: ^2.0.10
 
 
 dev_dependencies:
