--- a/uesb_forms/android/local.properties
+++ b/uesb_forms/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\manop\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
-flutter.buildMode=release
+sdk.dir=C:\\Users\\alexl\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\development\\flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
