--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ git reset --hard HEAD@{2}
 uesb_forms/android/local.properties
 uesb_forms/android/local.properties
 uesb_forms/android/local.properties
+uesb_forms/android/local.properties
